--- a/Index.html
+++ b/Index.html
@@ -1,11 +1,19 @@
 <!-- DIGIBINN WEB APPLICATION LANDING PAGE -->
 
 <html>
+    <header>
 
-<h1>Welcome to Digibinn</h1>
-<h3>Revolutionizing Trash Management</h3>
+    </header>
+    
+<body>
+    <h1>Welcome to Digibinn</h1>
+    <h3>Revolutionizing Trash Management</h3>
 
+</body>
 
+<footer>
+    
+</footer>
 
 
 </html>
