--- a/Index.html
+++ b/Index.html
@@ -14,11 +14,11 @@
     </header>
 
     <div class = "maintext">
-        <h1>Welcome to Digibinn</h1>
+        <h1>Welcome to Digibinn.</h1>
     </div>
 
     <div class = "subtext">
-    <h3>Revolutionizing Trash Management</h3>
+    <p>Revolutionizing Trash Management</p>
     <p>Register Here</p>
     </div>
    
