--- a/Index.html
+++ b/Index.html
@@ -2,6 +2,8 @@
 
 <html>
     <head>
+        <title>Digibinn - Home</title>
+
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
